--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
   package="com.scooterfinderapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission
+            android:name="android.permission.ACCESS_FINE_LOCATION"
+    />
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -21,5 +23,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data
+              android:name="com.google.android.geo.API_KEY"
+              android:value="AIzaSyCBcWpsa5LKZVFqib-L9JHu763hk0jF13s"/>
+
     </application>
 </manifest>
