--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.15",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-async-storage": "^0.0.1",
     "react-native-get-location": "^2.1.2",
     "react-native-maps": "0.29.4",
     "react-native-safe-area-context": "^3.3.2",
