--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.15.15",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "Buffer": "*",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-async-storage": "^0.0.1",
